# PolicyPilot

./: ReadMe.md  app.py  data_processor.py  ml_models.py  models.py  pdf_generator.py  pyproject.toml  routes.py
data/: economic_data.py  indian_policy_examples.py  sample_policies.py
static/css/: style.css
static/js/: charts.js  dashboard.js
templates/: 404.html  500.html  base.html  comparison.html  dashboard.html  index.html  results.html
