[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.4.3",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
    "xgboost>=3.0.2",
]
